--- a/employment.html
+++ b/employment.html
@@ -7,56 +7,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faculty</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Registration Form</h1>
+    <h1>Employment Registration</h1>
     <table class="table">
         <tr>
-            <td>Department</td>
-            <td><select name="" id="" class="form-control">
-                <option value="Computer Science and Communication Engineering">Computer Science and Communication Engineering</option>
-                <option value="Mechanical Engineering">Mechanical Engineering</option>
-                <option value="Civil Engineering">Civil Engineering</option>
-                <option value="Biotech Engineering">Biotech Engineering</option>
-                <option value="Chemical Engineering">Chemical Engineering</option>
-            </select></td>
-        </tr>
-        <tr>
-            <td>Faculty Name</td>
+            <td>Name</td>
             <td><input type="text" class="form-control"></td>
-        </tr>
-        <tr>
-            <td>Contact Num</td>
-            <td><input type="text" class="font-control"></td>
-        </tr>
-        <tr>
-            <td>Qualification</td>
-            <td><input type="text" class="font-control"></td>
         </tr>
         <tr>
             <td>Address</td>
             <td><textarea name="" id="" cols="30" rows="10" class="form-control"></textarea></td>
         </tr>
         <tr>
-            <td>Pin Code</td>
-            <td><input type="text" class="fomt-control"></td>
-        </tr>
-        <tr>
-            <td>Blood Group</td>
-            <td><select name="" id="" class="form-control">
-                <option value="A+ve">A+ve</option>
-                <option value="A-ve">A-ve</option>
-                <option value="B+ve">B+ve</option>
-                <option value="B-ve">B-ve</option>
-                <option value="O+ve">O+ve</option>
-                <option value="O-ve">O-ve</option>
-                <option value="AB+ve">AB+ve</option>
-            </select></td>
-        </tr>
-        <tr>
-            <td>College Name</td>
-            <td><input type="text" class="fotm-control"></td>
+            <td>Qualification</td>
+            <td><input type="text" class="form-control"></td>
         </tr>
         <tr>
             <td>District</td>
@@ -78,32 +44,20 @@
             </select></td>
         </tr>
         <tr>
-            <td>Year of Experience</td>
+            <td>Year Of Graduation</td>
             <td><input type="date" class="form-control"></td>
-        </tr>
-        <tr>
-            <td>DOB</td>
-            <td><input type="text" class="date"></td>
         </tr>
         <tr>
             <td>Email Id</td>
             <td><input type="text" class="email"></td>
         </tr>
         <tr>
-            <td>Username</td>
-            <td><input type="text" class="font-control"></td>
-        </tr>
-        <tr>
-            <td>Password</td>
-            <td><input type="text" class="font_control"></td>
-        </tr>
-        <tr>
-            <td>Confirm Password</td>
-            <td><input type="text" class="password"></td>
+            <td>Phone No</td>
+            <td><input type="text" class="form-control"></td>
         </tr>
         <tr>
             <td></td>
-            <td><button class="btn btn-danger">Submit</button></td>
+            <td><button class="btn btn-info">Submit</button></td>
         </tr>
     </table>
     <!-- JavaScript Bundle with Popper -->
