--- a/faculty.html
+++ b/faculty.html
@@ -11,101 +11,103 @@
 </head>
 <body>
     <h1>Registration Form</h1>
-    <table class="table">
-        <tr>
-            <td>Department</td>
-            <td><select name="" id="" class="form-control">
-                <option value="Computer Science and Communication Engineering">Computer Science and Communication Engineering</option>
-                <option value="Mechanical Engineering">Mechanical Engineering</option>
-                <option value="Civil Engineering">Civil Engineering</option>
-                <option value="Biotech Engineering">Biotech Engineering</option>
-                <option value="Chemical Engineering">Chemical Engineering</option>
-            </select></td>
-        </tr>
-        <tr>
-            <td>Faculty Name</td>
-            <td><input type="text" class="form-control"></td>
-        </tr>
-        <tr>
-            <td>Contact Num</td>
-            <td><input type="text" class="font-control"></td>
-        </tr>
-        <tr>
-            <td>Qualification</td>
-            <td><input type="text" class="font-control"></td>
-        </tr>
-        <tr>
-            <td>Address</td>
-            <td><textarea name="" id="" cols="30" rows="10" class="form-control"></textarea></td>
-        </tr>
-        <tr>
-            <td>Pin Code</td>
-            <td><input type="text" class="fomt-control"></td>
-        </tr>
-        <tr>
-            <td>Blood Group</td>
-            <td><select name="" id="" class="form-control">
-                <option value="A+ve">A+ve</option>
-                <option value="A-ve">A-ve</option>
-                <option value="B+ve">B+ve</option>
-                <option value="B-ve">B-ve</option>
-                <option value="O+ve">O+ve</option>
-                <option value="O-ve">O-ve</option>
-                <option value="AB+ve">AB+ve</option>
-            </select></td>
-        </tr>
-        <tr>
-            <td>College Name</td>
-            <td><input type="text" class="fotm-control"></td>
-        </tr>
-        <tr>
-            <td>District</td>
-            <td><select name="" id="" class="form-control">
-                <option value="Alappuzha">Alappuzha</option>
-                <option value="Ernakulam">Ernakulam</option>
-                <option value="Idukki">Idukki</option>
-                <option value="Kannur">Kannur</option>
-                <option value="Kasargod">Kasargod</option>
-                <option value="Kollam">Kollam</option>
-                <option value="Kottayam">Kottayam</option>
-                <option value="Kozhikode">Kozhikode</option>
-                <option value="Malappuram">Malappuram</option>
-                <option value="Palakkad">Palakkad</option>
-                <option value="Pathanamthitta">Pathanamthitta</option>
-                <option value="Thiruvananthapuram">Thiruvananthapuram</option>
-                <option value="Thrissur">Thrissur</option>
-                <option value="Wayanad">Wayanad</option>
-            </select></td>
-        </tr>
-        <tr>
-            <td>Year of Experience</td>
-            <td><input type="date" class="form-control"></td>
-        </tr>
-        <tr>
-            <td>DOB</td>
-            <td><input type="text" class="date"></td>
-        </tr>
-        <tr>
-            <td>Email Id</td>
-            <td><input type="text" class="email"></td>
-        </tr>
-        <tr>
-            <td>Username</td>
-            <td><input type="text" class="font-control"></td>
-        </tr>
-        <tr>
-            <td>Password</td>
-            <td><input type="text" class="font_control"></td>
-        </tr>
-        <tr>
-            <td>Confirm Password</td>
-            <td><input type="text" class="password"></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td><button class="btn btn-danger">Submit</button></td>
-        </tr>
-    </table>
+   <div class="container">
+    <div class="row">
+        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+            <div class="row">
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="labelform-label">Department</label>
+                    <select name="" id="" class="form-control">
+                        <option value="CS">CS</option>
+                        <option value="Mechanical">Mechanical</option>
+                        <option value="Civil">Civil</option>
+                        <option value="Biotech">Biotech</option>
+                        <option value="Chemiccal">Chemiccal</option>
+                    </select>
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">Faculty Name</label>
+                    <input placeholder="Faculty name" type="text" class="form-control">
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">Contact Num</label>
+                    <input placeholder="Enter your Number" type="text" class="form-control">
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">Qualification</label>
+                    <input placeholder="Enter your Qualification" type="text" class="form-control">
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">Address</label>
+                    <textarea placeholder="Enter your address" name="" id="" cols="30" rows="10" class="form-control"></textarea>
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">Pin code</label>
+                    <input placeholder="Enter your Pin code" type="text" class="form-control">
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">Contact Num</label>
+                    <select name="" id="" class="form-control">
+                        <option value="A+ve">A+ve</option>
+                        <option value="B+ve">B+ve</option>
+                        <option value="O+ve">O+ve</option>
+                    </select>
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">College Name</label>
+                    <input placeholder="Enter your College Name" type="text" class="form-control">  
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">District</label>
+                    <select name="" id="" class="form-control">
+                        <option value="Alapuzha">Alapuzha</option>
+                        <option value="Ernakulam">Ernakulam</option>
+                        <option value="Kannur">Kannur</option>
+                        <option value="Kottayam">Kottayam</option>
+                        <option value="Kollam">Kollam</option>
+                        <option value="Kozhikode">Kozhikode</option>
+                        <option value="Palakkad">Palakkad</option>
+                        <option value="Malappuram">Malappuram</option>
+                        <option value="Pathanamthitta">Pathanamthitta</option>
+                        <option value="Kasargod">Kasargod</option>
+                        <option value="Idukki">Idukki</option>
+                        <option value="Thiruvananthapuram">Thiruvananthapuram</option>
+                        <option value="Thrissur">Thrissur</option>
+                        <option value="Wayanad">Wayanad</option>
+                    </select>
+                
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">Year of Experience</label>
+                    <input placeholder="Enter your YOE" type="text" class="form-control">  
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">DOB</label>
+                    <input placeholder="Enter your DOB" type="date" class="form-control">  
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">Email Id</label>
+                    <input placeholder="Enter your Email id" type="text" class="form-control">  
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">User Name</label>
+                    <input placeholder="Enter your User Name" type="text" class="form-control">  
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">Password</label>
+                    <input placeholder="Enter your Password" type="text" class="form-control">  
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <label for="" class="form-control">Confirm Password</label>
+                    <input placeholder="Enter your Confirm Password" type="password" class="form-control">  
+                </div>
+                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                    <button class="btn btn-success">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+   </div>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
