--- a/pooja.html
+++ b/pooja.html
@@ -10,46 +10,52 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Pooja Reciept</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                <div class="row">
+                    <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                        <label for="" class="form-control">Name</label>
+                        <input placeholder="Enter your name" type="text" class="form-control">
+                    </div>
+                    <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                        <label for="" class="form-control">Zodiac Sign</label>
+                        <select name="" id="" class="form-control">
+                            <option value="Aries">Aries</option>
+                            <option value="Taurus">Taurus</option>
+                            <option value="Gemini">Gemini</option>
+                            <option value="Cancer">Cancer</option>
+                            <option value="Leo">Leo</option>
+                            <option value="Virgo">Virgo</option>
+                            <option value="Libra">Libra</option>
+                            <option value="Scorpius">Scorpius</option>
+                            <option value="Sagittarius">Sagittarius</option>
+                            <option value="Capricornus">Capricornus</option>
+                            <option value="Pisces">Pisces</option>
+                        </select>
+                    </div>
+                    <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                        <label for="" class="form-control">Pooja Name</label>
+                        <input placeholder="Enter pooja name" type="text" class="form-control"> 
+                    </div>
+                    <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                        <label for="" class="form-control">Amount</label>
+                        <input placeholder="Enter amount" type="text" class="form-control"> 
+                    </div>
+                    <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                        <label for="" class="form-control">Address</label>
+                        <textarea placeholder="Enter your address" name="" id="" cols="30" rows="10" class="font-control"></textarea>
+                    </div>
+                    <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                        <button class="btn btn-danger">Register</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
  <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-<h1>Pooja Reciept</h1>
-<table class="table">
-    <tr>
-        <td>Name</td>
-        <td><input type="text" class="form-control"></td>
-    </tr>
-    <tr>
-        <td>Zodiac Sign</td>
-        <td><select name="" id="" class="form-control">
-            <option value="Aries">Aries</option>
-            <option value="Taurus">Taurus</option>
-            <option value="Gemini">Gemini</option>
-            <option value="Cancer">Cancer</option>
-            <option value="Leo">Leo</option>
-            <option value="Virgo">Virgo</option>
-            <option value="Libra">Libra</option>
-            <option value="Scorpius">Scorpius</option>
-            <option value="Sagittarius">Sagittarius</option>
-            <option value="Capricornus">Capricornus</option>
-            <option value="Pisces">Pisces</option>
-        </select></td>
-    </tr>
-    <tr>
-        <td>Pooja Name</td>
-        <td><input type="text" class="form-control"></td>
-    </tr>
-    <tr>
-        <td>Amount</td>
-        <td><input type="text" class="form-control"></td>
-    </tr>
-    <tr>
-        <td>Address</td>
-        <td><textarea name="" id="" cols="30" rows="10" class="form-control"></textarea></td>
-    </tr>
-    <tr>
-        <td></td>
-        <td><button class="btn btn-primary">Submit</button></td>
-    </tr>
-</table>   
+
 </body>
 </html>
