--- a/reciept.html
+++ b/reciept.html
@@ -10,37 +10,40 @@
     <title>Reciept</title>
 </head>
 <body>
-    <h1>Reciept Form</h1>
-    <table class="table">
-        <tr>
-            <td>Reciept</td>
-            <td><input type="text" class="form-control"></td>
-        </tr>
-        <tr>
-            <td>Image</td>
-            <td><input type="text" class="file"></td>
-        </tr>
-        <tr>
-            <td>Description</td>
-            <td><textarea name="" id="" cols="30" rows="10" class="form-control"></textarea></td>
-        </tr>
-        <tr>
-            <td>Category</td>
-            <td><select name="" id="" class="form-control">
-                <option value="Vegetarian">Vegetarian</option>
-                <option value="Non Vegetarian">Non Vegetarian</option>
-                <option value="Eggetarian">Eggetarian</option>
-            </select></td>
-        </tr>
-        <tr>
-            <td>Poster</td>
-            <td><input type="text" class="date"></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td><button class="btn btn-warning">Submit</button></td>
-        </tr>
-    </table>
+    <h1><center> Reciept Form</center></h1>
+    <div class="container">
+        <div class="row div col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+            <div class="row">
+                <div class="col col-12 col-sm-6 col-md-6 vol-lg-12 col-xl-6 col-xxl-6">
+                    <label for="" class="form-label">Name</label>
+                    <input placeholder="Enter your name" type="text" class="form-control">
+                </div>
+                <div class="col col-12 col-sm-6 col-md-6 vol-lg-12 col-xl-6 col-xxl-6">
+                    <label for="" class="form-label">Image</label>
+                    <input type="file" class="form-control">
+                </div>
+                <div class="col col-12 col-sm-6 col-md-6 vol-lg-12 col-xl-6 col-xxl-6">
+                    <label for="" class="form-label">Name</label>
+                    <textarea placeholder="Enter the descrition" name="" id="" cols="30" rows="10" class="form-control"></textarea>
+                </div>
+                <div class="col col-12 col-sm-6 col-md-6 vol-lg-12 col-xl-6 col-xxl-6">
+                    <label for="" class="form-label">Category</label>
+                    <select name="" id="" class="form-control">
+                        <option value="Veg">Veg</option>
+                        <option value="Non-veg">Non-veg</option>
+                        <option value="Eggetarian">Eggetarian</option>
+                    </select>
+                </div>
+                <div class="col col-12 col-sm-6 col-md-6 vol-lg-12 col-xl-6 col-xxl-6">
+                    <label for="" class="form-label">Date</label>
+                    <input type="date" class="form-control">
+                </div>
+                <div class="col col-12 col-sm-6 col-md-6 vol-lg-12 col-xl-6 col-xxl-6">
+                    <button class="btn btn-success">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
