--- a/birth.html
+++ b/birth.html
@@ -10,48 +10,48 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Birth Certificate Application</h1>
-    <table class="table">
-        <tr>
-            <trd>Name of child</trd>
-            <trd><input type="text" class="form-control"></trd>
-        </tr>
-        <tr>
-            <trd>Name Of Father</trd>
-            <trd><input type="text" class="form-control"></trd>
-        </tr>
-        <tr>
-            <trd>Name Of Mother</trd>
-            <trd><input type="text" class="form-control"></trd>
-        </tr>
-        <tr>
-            <trd>Address</trd>
-            <trd><textarea name="" id="" cols="30" rows="10" class="form-control"></textarea></trd>
-        </tr>
-        <tr>
-            <trd>Place of Birth</trd>
-            <trd><input type="text" class="form-control"></trd>
-        </tr>
-        <tr>
-            <trd>Date of Birth</trd>
-            <trd><input type="date" class="form-control"></trd>
-        </tr>
-        <tr>
-            <trd>Blood Group</trd>
-            <trd><select name="" id="" class="form-control">
-                <option value="A+ve">A+ve</option>
-                <option value="A-ve">A-ve</option>
-                <option value="B+ve">B+ve</option>
-                <option value="Bve">B-ve</option>
-                <option value="O+ve">O+ve</option>
-                <option value="O-ve">Ove</option>
-            </select></trd>
-        </tr>
-        <tr>
-            <trd></trd>
-            <trd><button class="btn btn-secondary">submit</button></trd>
-        </tr>
-    </table>
+    <h1><center>Birth Certificate Application</center> </h1>
+   <div class="container">
+    <div class="row">
+        <div class="col col-col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+            <div class="row div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <label for="" class="form-label">Name of child</label>
+                <input placeholder="Enter name of child" type="text" class="form-control">
+            </div>
+            <div class="row div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <label for="" class="form-label">Name of Father</label>
+                <input placeholder="Enter name of father" type="text" class="form-control">
+            </div>
+            <div class="row div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <label for="" class="form-label">Name of mother</label>
+                <input placeholder="Enter name of mother" type="text" class="form-control">
+            </div>
+            <div class="row div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <label for="" class="form-label">Address</label>
+                <textarea placeholder="Enter the address" name="" id="" cols="30" rows="10" class="form-control"></textarea>
+            </div>
+            <div class="row div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <label for="" class="form-label">Blood Group</label>
+                <select name="" id="" class="form-control">
+                    <option value="A+ve">A+ve</option>
+                    <option value="B+ve">B+ve</option>
+                    <option value="O+ve">O+ve</option>
+                </select>
+            </div>
+            <div class="row div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <label for="" class="form-label">Place of Birth</label>
+                <input placeholder="Enter Place of Birth" type="text" class="form-control">
+            </div>
+            <div class="row div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <label for="" class="form-label">Date of Birth</label>
+                <input placeholder="Enter Date of Birth" type="date" class="form-control">
+            </div>
+            <div class="row div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <button class="btn btn-secondary">Register</button>
+            </div>
+        </div>
+    </div>
+   </div>
  <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
    
